--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 
                 </section></section>
               <div class="container py-5 text-white text-center">
-              <img  src="img/结婚离婚登记.png" alt="image" >
+              <img  src="img/结婚离婚登记.jpg" alt="image" >
              </div>
 
                 
