--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="hero-overlay"></div>
       <div class="container py-5 text-white text-center">
         <h1 class="text-shadow hero-heading">婚姻的围城，想跳出去有多难</h1>
-        <p class="text-shadow lead my-4">婚姻就像一座围城,围城外的人想进来,围城里的人想出去。</p>
+        <p class="text-shadow lead my-4">婚姻就像一座围城,城外的人想进来,城里的人想出去。</p>
       </div>
     </section>
       <!--00 start -->
