--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="hero-overlay"></div>
       <div class="container py-5 text-white text-center">
         <h1 class="text-shadow hero-heading">婚姻的围城，想跳出去有多难</h1>
-        <p style="color: rgb(255,255,255);font-size: 1.5rem;font-weight: 300;font-family: "微软雅黑";text-align: justify;">婚姻就像一座围城,围城外的人想进来,围城里的人想出去。</p>
+        <p style="color: rgb(255,255,255);font-size: 1.5rem;font-weight: 300;font-family: "微软雅黑";text-align: justify;">婚姻就像一座围城,城外的人想进来,城里的人想出去。</p>
       </div>
     </section>
       <!--00 start -->
