--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <section style="background: url(img/timg.jpg)" class="py-5 bg-cover bg-center">
       <div class="container py-5 text-white text-center">
          <p></p>
-          <h1 class="text-shadow hero-heading">婚姻的围城，想跳出去有多难</h1><br>
-        <p style="color: rgb(255,255,255);font-size: 2rem;font-weight: 200;font-family: "微软雅黑";text-align: justify;">婚姻就像一座围城,城外的人想进来,城里的人想出去。</p><br><br>
+          <h1 class="text-shadow hero-heading">婚姻的围城，想跳出去有多难</h1><br><br>
+        <p style="color: rgb(255,255,255);font-size: 1.5rem;font-weight: 200;font-family: "微软雅黑";text-align: justify;">婚姻就像一座围城，城外的人想进来，城里的人想出去。</p><br><br
       </div>
     </section>
       <!--00 start -->
